[package]
name = "draug"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../clone/bevy", default-features = false, features = ["render", "bevy_winit", "x11"], version = "0.7.0-dev" }
# druid = { git = "https://github.com/yrns/druid", branch = "bevy", default-features = false }
druid = { path = "../clone/druid/druid", default-features = false }
# piet-b = { path = "./piet-b", version = "0.0.1" }

[workspace]
members = ["piet-b"]
