[package]
name = "piet-b"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "../../clone/bevy", default-features = false, features = ["bevy_asset", "render", "bevy_winit", "x11", "png"], version = "0.8.0-dev" }
glyph_brush_layout = "0.2.3"
piet = "0.5.0"
